--- a/application/views/scripts/dossier/edit-verifications-techniques.phtml
+++ b/application/views/scripts/dossier/edit-verifications-techniques.phtml
@@ -11,27 +11,19 @@
 
     <div class='row-fluid'>
         <div class='span10'>
-            <?php foreach ($this->rubriques as $key => $rubrique):
-                if (($key % 4) === 0): ?>
-                    <div class='row-fluid'>
-                <?php endif;
-
-                echo $this->partial('formulaire/partials/partial-edit-rubrique-display.phtml', $rubrique);
-
-                if ((($key % 4) === 3) || ($rubrique === end($this->rubriques))): ?>
-                    </div>
-                <?php endif;
-            endforeach ?>
+            <?php foreach ($this->rubriques as $key => $rubrique): ?>
+                <?=  $this->partial('formulaire/partials/partial-edit-rubrique-display.phtml', $rubrique); ?>
+            <?php endforeach ?>
         </div>
     </div>
-
-    <div id='affichage-informations' class='form-horizontal'>
-        <?= $this->partial('formulaire/formLoopInputChamp.phtml', [
-                'rubriques' => isset($this->rubriques) ? $this->rubriques : [],
-                'champsvaleurliste' => isset($this->champsvaleurliste) ? $this->champsvaleurliste : [] ,
-                'listeChampFils' => isset($this->listeChampFils) ? $this->listeChampFils : [] ,
+    
+    <?= 
+        $this->partial('formulaire/partials/partial-form-custom.phtml', [
+                'corpsformulaire' => $this->corpsformulaire,
+                'valeurformulaire' => $this->valeurformulaire,
+                'rubriquedisplay' => $this->rubriques,
                 'canWrite' => true
             ]); 
-        ?>
-    </div>
+    ?>
+    
 </form>
