--- a/application/views/scripts/dossier/verifications-techniques.phtml
+++ b/application/views/scripts/dossier/verifications-techniques.phtml
@@ -5,14 +5,16 @@
 <div id='descriptif-personnalise'>
     <h3>Vérifications Techniques</h3>
     <h4 class='h4_subtitle'>Rubriques</h4>
+    
     <?= $this->partialLoop('formulaire/partials/partial-rubrique-display.phtml', $this->rubriques) ?>
+
     <div id='affichage-informations' class='form-horizontal'>
-        <?= $this->partial('formulaire/formLoopInputChamp.phtml', [
-                'rubriques' => isset($this->rubriques) ? $this->rubriques : [],
-                'champsvaleurliste' => isset($this->champsvaleurliste) ? $this->champsvaleurliste : [] ,
-                'listeChampFils' => isset($this->listeChampFils) ? $this->listeChampFils : [] ,
-                'canWrite' => false
-            ]); 
+        <?= $this->partial('formulaire/partials/partial-form-custom.phtml', [
+                    'corpsformulaire' => isset($this->corpsformulaire) ? $this->corpsformulaire : array(),
+                    'valeurformulaire' => isset($this->valeurformulaire) ? $this->valeurformulaire : array(),
+                    'rubriquedisplay' => $this->rubriques,
+                    'canWrite' => false
+                ]); 
         ?>
     </div>
 </div>
