Amélioration du style

--- a/application/views/scripts/dossier/results/avisderogation/dossier.phtml
+++ b/application/views/scripts/dossier/results/avisderogation/dossier.phtml
@@ -1,5 +1,5 @@
-<?php foreach ($this->DOSSIERS_ETAB as $dossier) : ?>
-    <div class="controls">
+<?php foreach ($this->DOSSIERS_ETAB as $dossier): ?>
+    <div class="radio-controls">
         <label class="radio" for="ID_DOSSIER_<?= $dossier['ID_DOSSIER'] ?>">
             <input
                 type="radio"
