--- a/application/views/scripts/dossier/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations.phtml
@@ -42,15 +42,18 @@
         </div>
     </div>
 
-    <?=
-        $this->partial(
-            'dossier/results/avisderogation/liste-dossier.phtml',
-            [
-                'listeDossierParType' => $this->listDossierEtab,
-                'ID_DOSSIER_LIE' => $this->avisDerogations['ID_DOSSIER_LIE']
-            ]
-        );
-    ?>
+    <div class="control-group">
+        <label class="control-label">Avis/Dérogation levé(e):</label>
+        <?=
+            $this->partial(
+                'dossier/results/avisderogation/liste-dossier.phtml',
+                [
+                    'listeDossierParType' => $this->listDossierEtab,
+                    'ID_DOSSIER_LIE' => $this->avisDerogations['ID_DOSSIER_LIE']
+                ]
+            );
+        ?>
+    </div>
 
     <div class="control-group">
         <label class="control-label"for="DISPLAY_HISTORIQUE">Afficher dans l'historique de l'établissement</label>
