--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1266,3 +1266,7 @@ dl.champ_effectif_camping dd input {
 #ign-accordion select[name='FORMAT_COUCHECARTO'] {
     width: fit-content;
 }
+
+.radio-controls {
+    margin-left: 3rem;
+}
