--- a/application/views/scripts/dossier/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations.phtml
@@ -48,8 +48,7 @@
             $this->partial(
                 'dossier/results/avisderogation/liste-dossier.phtml',
                 [
-                    'listeDossierParType' => $this->listDossierEtab,
-                    'ID_DOSSIER_LIE' => $this->avisDerogations['ID_DOSSIER_LIE']
+                    'listeDossierParType' => $this->listDossierEtab
                 ]
             );
         ?>
