--- a/application/views/scripts/dossier/results/avisderogation/liste-dossier.phtml
+++ b/application/views/scripts/dossier/results/avisderogation/liste-dossier.phtml
@@ -5,9 +5,9 @@
             <?php if(empty($dossiers)): ?>
                 : <strong>Aucun dossier de ce type disponible</strong>
             <?php else: ?>
-                <span class='btn deploy' attr="<?= 'dossType'.$type ?>">
+                <button class='btn deploy' type='button' type-dossier="<?= 'dossType'.$type ?>">
                     <i class='icon-minus'></i>
-                </span>
+                </button>
             <?php endif ?>
         </p>
         <div id="<?= 'dossType'.$type ?>">
@@ -16,7 +16,7 @@
                     'dossier/results/avisderogation/dossier.phtml',
                     [
                         'DOSSIERS_ETAB' => $dossiers,
-                        'ID_DOSSIER_LIE' => $this->avisDerogations['ID_DOSSIER_LIE']
+                        'ID_DOSSIER_LIE' => $this->ID_DOSSIER_LIE ?? null
                     ]
                 );
             ?>
