--- a/application/views/scripts/dossier/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations.phtml
@@ -44,7 +44,14 @@
 
     <div class="control-group">
         <label class="control-label">Avis/Dérogation levé(e):</label>
-        <?= $this->partial('dossier/results/avisderogation/dossier.phtml', ['DOSSIERS_ETAB' => $this->listDossierEtab, 'ID_DOSSIER_LIE' => $this->ID_DOSSIER_LIE]); ?>
+        <?=
+            $this->partial(
+                'dossier/results/avisderogation/liste-dossier.phtml',
+                [
+                    'listeDossierParType' => $this->listDossierEtab
+                ]
+            );
+        ?>
     </div>
 
     <div class="control-group">
