Correction de la récupération des éléments pour l'ajout d'un champ

--- a/public/css/formulaire/formulaire.css
+++ b/public/css/formulaire/formulaire.css
@@ -27,7 +27,9 @@ div[id^='saved-rubriques-'] a {
     display: none;
 }
 
-#default-display, #actions {
+#default-display,
+#actions,
+td.tdMove {
     vertical-align: middle;
 }
 
