Simplifications & corrections de type

--- a/public/css/formulaire/formulaire.css
+++ b/public/css/formulaire/formulaire.css
@@ -33,6 +33,10 @@ td.tdMove {
     vertical-align: middle;
 }
 
+td.tdMove {
+    text-align: center;
+}
+
 #actions a {
     padding: 0.5rem;
     text-decoration: none;
