Suppression de code mort & Simplification du js

--- a/application/views/scripts/formulaire/index.phtml
+++ b/application/views/scripts/formulaire/index.phtml
@@ -46,7 +46,7 @@
                                     <th></th>
                                 </tr>
                             </thead>
-                            <tbody id=<?=$formulaire['ID_CAPSULERUBRIQUE']?> class="grp">
+                            <tbody id="capsule-rubrique-<?= $formulaire['ID_CAPSULERUBRIQUE']?>" class="grp">
                                 <?php foreach($formulaire['RUBRIQUES'] as $rubrique): ?>
                                     <tr id=<?=$rubrique['ID_RUBRIQUE']?>>
                                         <td class='tdMove'><i class="icon-move"></i></td>
